[metadata]
name = dtimsprep
version = 0.1.1
author = Nicholas Archer
url = https://github.com/thehappycheese/dtimsprep.git
long_description = file: readme.md
long_description_content_type = text/markdown


[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7.1
install_requires =
	pandas >=1.3.1
